--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,49 @@
+altair==5.5.0
+attrs==25.3.0
+blinker==1.9.0
+cachetools==5.5.2
+certifi==2025.4.26
+charset-normalizer==3.4.2
+click==8.2.1
+colorama==0.4.6
+gitdb==4.0.12
+GitPython==3.1.44
+idna==3.10
+importlib==1.0.4
+Jinja2==3.1.6
+jsonschema==4.24.0
+jsonschema-specifications==2025.4.1
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
+narwhals==1.41.0
+numpy==2.2.6
+packaging==24.2
 pandas==2.2.3
 pillow==10.4.0
+pip-system-certs==4.0
+protobuf==5.29.5
+pyarrow==20.0.0
 pydeck==0.9.1
-streamlit_option_menu==0.4.0
+Pygments==2.19.1
+python-dateutil==2.9.0.post0
+pytz==2025.2
+pyzbar==0.1.9
+referencing==0.36.2
+requests==2.32.3
+rich==13.9.4
+rpds-py==0.25.1
+setuptools==80.9.0
+six==1.17.0
+smmap==5.0.2
 streamlit==1.39.0
+streamlit-option-menu==0.4.0
+tenacity==9.1.2
+toml==0.10.2
+tornado==6.5.1
+typing_extensions==4.13.2
+tzdata==2025.2
+urllib3==2.4.0
+watchdog==5.0.3
+wheel==0.45.1
+wrapt==1.17.2
